tests/analyze/wrong-arg-type/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: No instance of trait `numeric` for type `string`.
> 2 |   n + n
        ^^^^^

